<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_setting"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always" />

    <item
        android:enabled="false"
        android:id="@+id/menu_backup"
        android:title="@string/menu_backup"
        app:showAsAction="never" />
    <item
        android:enabled="false"
        android:id="@+id/menu_import"
        android:title="@string/menu_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_reset"
        android:title="@string/menu_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>